S5012793-Audience API Changes to Reference App
